- BugFix: When manually importing a new CTY.CSV, although data was updated, it was not shown until next KLog start.
- BugFix: In the others tab, the DXCC was sometime not correctly identified.
- BugFix: Update on the DXCC widget caused no data to be shown if some columns were selected.
- BugFix: Identification is a band was HF or VHF was not always properly done.
- BugFix: When importing an ADIF file, if the file was not correct it was not possible to cancel the whole importing process.
- Some minor changes on source code to optimize and improve.
- Translations updated: Croatian (TNX M0NKC), Japanese (TNX JL3OXR) & Spanish (EA4TV).

November 2016 - 0.9.2.5
- BugFix: ADIF export function was not exporting the correct BAND & MODE data.

September 2016 - 0.9.2.4
- GUI: Created a DXCC status where all the DXCC entities are listed showing the working/confirmed status.
- GUI: Created a Satellite list including (up to now) only LOTW compatible satellites.
- GUI: Created a widget to manage all "My Data" simplifying implementation of the main widget.
- GUI: Bands in the combobox are always shown correctly ordered (botton-up).
- GUI: Improved the LOTW date management (TNX JL3OXR).
- BugFix: Preferences->Misc: It was not possible to edit the default filename. (TNX K6XT).
- BugFix: Added the Power unit (W) to the power box. Debian bug #654332.
- BugFix: When editing a QSO in some text boxes text was reused from previous QSO and data could be corrupted.
- BugFix: Minor bug in WAZ management.
- BugFix: When managing logs in the setup is was not possible to edit the log data as a new log was always created.
- When starting KLog for the first time, the setup guidance has been improved.
- When selecting an entity, different from the proposed on country file, KLog asks the user which one to use.
- Operator from the selected log is used as default when entering QSO (as station callsign).
- Japanese translation updated. (TNX JL3OXR).
- Spanish translation updated.